--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.6.3"
+    "fs.promises": "^0.1.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.35.1",
+    "uuid": "^9.0.1"
   },
   "name": "backend",
   "version": "1.0.0",
